# hub-sheetflow-backend

./: .Dockerignore  CHANGES.md  CHANGESLOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  gunicorn.conf.py  manage.py  pyproject.toml
entrypoints/: init-app.sh  init-db.sh
migrations/: env.py
migrations/versions/: 00f8d8809f7c_adjust_coluns_reference_entry_install_.py  045efde74858_adiiconado_a_coluna_do_financeiro.py  055ea15f6208_add_models_installment_payment.py  05fb5ce77fdb_adjust_in_table_installment_payment.py  0cd8288bc07e_add_prazo.py  1a0b69a04ca5_add_table_for_notifications_finance_.py  2a1447b1aa73_init_database_manage.py  331c0270e50f_ajuste_na_tabela_groups.py  3ee10320b51c_add_number_process.py  4d694a573bbb_ajutes_no_outbox.py  5cc8579ef7a0_adjust_columns_in_install_numbers.py  5e5c6359cd7a_ajuste_na_tabela_mappgins_grupos.py  6398654ed74e_add_workers_courtes_deadlines.py  705815744398_ajuste_tables_mappings.py  8187cc6a0250_add_columns_groups.py  8242eddd326a_add_coluns_role_for_users.py  93e82d2a7bf5_adjust_table_installment_payment.py  a3d3716f0da8_innit_database.py  b51151e52cb2_init_database.py  c10a46bfd03b_ajuste_na_tabela_groups_com_mappeamento.py  c5c2edd6be07_init_migrations.py  cfc02cf9d51c_ajuste_no_mappings_groups.py  d0fe21a1494b_alter_mappigns_groups.py  d7e1e80a88a1_add_tables_for_workers.py  e24c53516a7a_adicionando_log.py  f8812e008478_add_colum_for_charged_at.py  fd4e1c56f90e_database_manage_init.py
seed/: database.xlsx  seed_mappings_groups.py
src/: external.py  main.py
src/application/: __init__.py
src/application/api/v1/: __init__.py
src/application/api/v1/controller/: finance.py  groups.py  indicator_analysis.py  login.py  users.py
src/application/api/v1/dependencies/: finance.py  groups.py  indicator_analysis.py  login.py  users.py
src/application/api/v1/dependencies/common/: pagination.py  session.py
src/application/api/v1/middlewares/: exceptions.py
src/application/api/v1/routes/: finance.py  groups.py  indicator_analysis.py  login.py  users.py
src/application/api/v1/schemas/: finance.py  groups.py  indicator_analysis.py  login.py  users.py
src/application/api/v1/schemas/common/: exceptions.py  pagination.py
src/core/: config.py
src/core/config/: logger.py  settings.py
src/core/domain/dtos/: finance.py  groups.py  indicator_analysis.py  installment_payment.py  login.py  users.py
src/core/domain/dtos/common/: pagination.py
src/core/domain/enum/: users.py
src/core/domain/exceptions/: finance.py  groups.py  users.py
src/core/domain/interface/: finance.py  groups.py  indicator_analysis.py  login.py  users.py
src/core/domain/models/: __init__.py  base.py  court_deadline.py  finance.py  financial_outflow_box.py  groups.py  installment_out_flow_payment.py  installment_payment.py  mappings_groups.py  notification_court_deadline.py  notification_jobs.py  notification_jobs_out_flow.py  users.py
src/core/domain/service/: finance.py  groups.py  indicator_analysis.py  login.py  users.py
src/core/domain/use_case/: finance.py  groups.py  indicator_analysis.py  login.py  users.py
src/core/domain/utils/: get_argon.py  get_from_sequence.py
src/core/exceptions/: custom.py
src/db/: extensions.py
src/infrastructure/database/: session.py  utils.py
src/infrastructure/extenal_apis/: api_base_client.py  evolution_api.py
src/infrastructure/repositories/: finance_postgres.py  groups_postgres.py  indicator_analysis.py  login_postgres.py  users_postgres.py
src/infrastructure/workers/: main.py  woerkers_sheetflow_out_flow_finance.py  workers_court_deadline.py  workers_sheetflow.py  workers_sheetflow_out_flow_finance.py
src/model/: __init__.py  base.py  groups.py  log.py  payments.py  user.py
src/model/commom/: role.py
src/model/commons/: fields.py  role.py
src/resource/: __init__.py  user.py
src/resource/commons/: pagination.py
src/service/: user.py
src/utils/: metadata.py  pagination.py  security.py
tests/: conftest.py  test_app.py
tests/core/: test_config.py
tests/db/: test_extensions.py
tests/model/: test_base.py  test_groups.py  test_payments.py  test_user.py
tests/model/commons/: test_fields.py
tests/resource/: test_all_namespace.py
tests/unit/application/v1/controller/: test_groups.py  test_users.py
tests/unit/application/v1/dependencies/: test_groups.py  test_user.py
tests/unit/application/v1/dependencies/common/: test_pagination.py
tests/unit/application/v1/middleware/: test_exceptions.py
tests/unit/application/v1/routes/: test_router.py  test_router_groups.py
tests/unit/application/v1/schemas/: test_user.py
tests/unit/core/config/: test_settings.py
tests/unit/core/domain/dtos/common/: test_pagination.py
tests/unit/core/domain/service/: test_user.py
tests/unit/core/domain/use_case/: test_user.py
tests/unit/core/domain/utils/: test_from_sequence.py  test_get_argon.py
tests/unit/infrastructure/database/: test_session.py
tests/unit/infrastructure/repositories/: test_group.py  test_user.py
tests/utils/: test_metadata.py  test_pagination.py
