[project]
name = "hub-sheetflow-backend"
version = "0.1.0"
description = "Backend da plataforma de automação de planilhas"
authors = [{ name = "Hedris Pereira", email = "hedrisgts@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = ">=3.1.2,<4.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
psycopg = ">=3.2.12,<4.0.0"
flask-restx = ">=1.3.2,<2.0.0"
alembic = ">=1.17.1,<2.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
flask-cors = "^6.0.1"
flask-jwt-extended = "^4.7.1"
psycopg2 = "^2.9.11"
gunicorn = "^23.0.0"
debugpy = "^1.8.17"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = ">=24.0.0,<25.0.0"
isort = ">=5.13.0,<6.0.0"
flake8 = ">=7.0.0,<8.0.0"
mypy = ">=1.10.0,<2.0.0"
autoflake = ">=2.3.1,<3.0.0"
taskipy = ">=1.14.1,<2.0.0"
pre-commit = ">=3.7.0,<4.0.0"


[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=5.0.0,<6.0.0"

[tool.taskipy.tasks]
install = { cmd = "poetry install --with dev,test", help = "Instala todas as dependências (dev + test)" }
clean = { cmd = "rm -rf .pytest_cache/ .coverage htmlcov/ __pycache__/ && find . -name '*.pyc' -delete", help = "Limpa caches e arquivos compilados" }
format = { cmd = "echo '🚀 Formatando código...' && poetry run autoflake --remove-all-unused-imports --remove-unused-variables --in-place --recursive src tests && poetry run isort src tests && poetry run black src tests && echo '✨ Código formatado com sucesso!'", help = "Formata código com autoflake + isort + black" }
check = { cmd = "echo '🧹 Rodando Black...' && poetry run black src tests --check --diff || exit 1 && echo '📐 Rodando isort...' && poetry run isort src tests --check-only || exit 1 && echo '🕵️ Rodando Flake8...' && poetry run flake8 src tests || exit 1 && echo '✅ Tudo limpo e padronizado!'", help = "Checagem de estilo e qualidade de código (black + isort + flake8)" }
test = { cmd = "poetry run pytest tests/ --cov=src --cov-report=term-missing", help = "Roda testes com coverage" }
post_test = { cmd = "poetry run coverage html", help = "Gera relatório HTML de coverage" }
serve = { cmd = "poetry run gunicorn main:app --bind 0.0.0.0:8000 --reload", help = "Roda o app em modo de desenvolvimento" }
docker_build = { cmd = "poetry install --without dev,test && docker build -t barbershop-project .", help = "Build da imagem Docker (sem dev/test)" }
docker_up = { cmd = "docker-compose up --build -d", help = "Sobe containers (app + db)" }
docker_down = { cmd = "docker-compose down -v", help = "Derruba containers e volumes" }
default = { cmd = "task clean && task format && task check && task test", help = "Pipeline local completo: limpeza + formatação + lint + testes" }


[tool.black]
line-length = 79
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
force_grid_wrap = 0
combine_as_imports = true
skip_gitignore = true
known_first_party = ["src", "tests"]
default_section = "THIRDPARTY"
lines_after_imports = 2


[tool.flake8]
max-line-length = 79
max-complexity = 10
extend-ignore = ["E203", "W503"]
per-file-ignores = ["__init__.py:F401"]
exclude = [".venv", "build", "dist", "migrations", "__pycache__"]
statistics = true
show-source = true
count = true